# icp_visualization

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: params.yaml
data/: campus_01.pcd  campus_02.pcd  indoor_01.pcd  indoor_02.pcd  office_b10.pcd  office_b11.pcd  parking_b15.pcd  parking_b2.pcd  tree_01.pcd  tree_02.pcd  tree_03.pcd  tree_04.pcd
include/fast_gicp/: fast_gicp.hpp  fast_vgicp.hpp  fast_vgicp_voxel.hpp  lsq_registration.hpp  so3.hpp
include/fast_gicp/impl/: fast_gicp_impl.hpp  fast_vgicp_impl.hpp  lsq_registration_impl.hpp
include/icp_visualization/: icp_visualization.h
include/locus_gicp/: covariance.h  multithreaded_gicp.h  multithreaded_gicp.hpp
launch/: gdb_icp.launch  icp.launch  rviz.launch
rviz/: demo.rviz  indoor.rviz  office.rviz  outdoor.rviz
src/: icp_visualization.cpp  main.cpp
